# formfactor

./: Doxyfile  Makefile.am  Makefile.in  cfg.txt  cfghelp  configure  configure.ac  reconf.csh
lib/: Makefile.am  Makefile.in  Makefile.old  regen.sh  regen_makefile_helper.csh
lib/radmat/: foo
lib/radmat/construct_data/: construct_correlators.cc  construct_correlators.h  construct_correlators_bad_data_repository.cc  construct_correlators_bad_data_repository.h  construct_correlators_utils.cc  construct_correlators_utils.h  construct_correlators_xml.cc  construct_correlators_xml.h  construct_data.h  data_tag_redstar_interface.cc  data_tag_redstar_interface.h  lattice_multi_data_object.h
lib/radmat/data_representation/: .make_head.csh.swp  data_representation.h  data_representation_cubic_groups.cc  data_representation_cubic_groups.h  data_representation_factory.cc  data_representation_factory.h  data_representation_lorentz_groups.cc  data_representation_lorentz_groups.h  data_representation_prim.h  data_representation_primitive_rep.h  data_representation_subduction_map.cc  data_representation_subduction_map.h  data_representation_three_point.cc  data_representation_three_point.h  data_tag_primitive.h  data_tag_three_point.cc  data_tag_three_point.h
lib/radmat/database/: database.h  radmat_database_interface.cc  radmat_database_interface.h  radmat_overlap_key_val_db.cc  radmat_overlap_key_val_db.h
lib/radmat/driver/: driver.h  radmat_driver.cc  radmat_driver.h  radmat_driver_aux.cc  radmat_driver_aux.h  radmat_driver_props.cc  radmat_driver_props.h  radmat_single_q2_driver.cc  radmat_single_q2_driver.h
lib/radmat/ff/: ff.h  formfactor_abs_base_cfg.h  formfactor_utils.h  lorentzff_canonical_JJlist_ff.h  lorentzff_canonical_PiPi.h  lorentzff_canonical_PiPiStar.h  lorentzff_canonical_PiRho.h  lorentzff_canonical_RhoPi.h  lorentzff_canonical_RhoRho.h  lorentzff_canonical_cont_spin_formfactors.h  lorentzff_canonical_frame_formfacs_rotation_manager.h  lorentzff_canonical_one.h  lorentzff_canonical_rotations_checker.cc  lorentzff_canonical_rotations_checker.h  lorentzff_cubic_reps.h  lorentzff_formfac_utils.cc  lorentzff_formfac_utils.h  lorentzff_formfactor_abs_base_cfg.h  lorentzff_formfactor_factory.cc  lorentzff_formfactor_factory.h  lorentzff_polarization_embedding.h  lorentzff_polarization_embedding_old.h  lorentzff_polarization_tensors.h  mass_averager.h
lib/radmat/ff_interface/: .formfactor_kinematic_factors.cc.swp  ff_interface.h  formfactor.h  formfactor_cubic_formfactors.cc  formfactor_cubic_formfactors.h  formfactor_factory.cc  formfactor_factory.h  formfactor_helicity_formfactors.cc  formfactor_helicity_formfactors.h  formfactor_kinematic_factors.cc  formfactor_kinematic_factors.h  formfactor_subduced_formfactors.cc  formfactor_subduced_formfactors.h  photon_subduction.cc  photon_subduction.h
lib/radmat/fitting/: fit_tins.cc  fit_tins.h  fitting.h
lib/radmat/llsq/: llsq.h  llsq_chisq.cc  llsq_chisq.h  llsq_formfactor_data.cc  llsq_formfactor_data.h  llsq_gen_system.cc  llsq_gen_system.h  llsq_multi_data.h  llsq_multi_data_serialize.h  llsq_multi_driver.cc  llsq_multi_driver.h  llsq_multipole_solution.cc  llsq_multipole_solution.h  llsq_solution.h  llsq_solver.h  llsq_solvers.cc  llsq_solvers.h  llsq_zero_filter.h
lib/radmat/redstar_interface/: abstract_named_object.h  redstar_abstract_xml_factory.cc  redstar_abstract_xml_factory.h  redstar_abstract_xml_interface.h  redstar_canonical_lattice_rotations.cc  redstar_canonical_lattice_rotations.h  redstar_canonical_rotations.cc  redstar_canonical_rotations.h  redstar_cartesian_interface.cc  redstar_cartesian_interface.h  redstar_improved_vector_current_xml_interface.cc  redstar_improved_vector_current_xml_interface.h  redstar_interface.h  redstar_invert_subduction.cc  redstar_invert_subduction.h  redstar_particle_handler_utils.cc  redstar_particle_handler_utils.h  redstar_photon_polarization_tensor.h  redstar_photon_props.h  redstar_single_particle_meson_xml_interface.cc  redstar_single_particle_meson_xml_interface.h  redstar_three_point_utils.cc  redstar_three_point_utils.h  redstar_three_point_xml_handler.h  redstar_three_point_xml_interface.cc  redstar_three_point_xml_interface.h  redstar_three_point_xml_lorentz_handler.cc  redstar_three_point_xml_lorentz_handler.h  redstar_three_point_xml_mixed_handler.cc  redstar_three_point_xml_mixed_handler.h  redstar_three_point_xml_subduce_handler.cc  redstar_three_point_xml_subduce_handler.h  redstar_vector_current_xml_interface.cc  redstar_vector_current_xml_interface.h
lib/radmat/register_all/: register_all.cc  register_all.h
lib/radmat/utils/: aux.cc  (+27 more)
main/: Makefile.am  Makefile.in  corr_norm.cc  estimate_error.cc  grab_ff.cc  grab_pol.cc  grab_vector_mean_cmp.cc  invert_subduced.cc  mass_overlap_db_combine.cc  mass_overlap_db_create.cc  mass_overlap_db_util.cc  pole_enhancement.cc  radmat.cc  radmat_util.cc  simple_test.cc  single_plot.cc  subduce.cc  test_levi_civita.cc  test_redstar_ops.cc  test_rotations.cc  test_tens.cc
main/ini_files/: check_rotations.csh  check_rots.out  check_rots_llsq.csh  corr_norm.xml  driver.improved.subduce.ini.xml  driver.isospin0.unimproved.subduce.ini.xml  driver.unimproved.lorentz.ini.xml  driver.unimproved.mixed.ini.xml  driver.unimproved.subduce.ini.xml  fake.data.ini.xml  grab_ff.ini.xml  mass_overlap.xml  out  single_q2.ini.xml  tmp  util.rot_llsq.ini.xml
main/refit/: do_refit.csh  refit.@@@.ini.xml
tests/: Makefile.am  Makefile.in  test_fit_plot.ax
tests/headers/: test_common.h  test_tensor.h  tester.h
tests/src/: fake_3pt_play.cc  simple_world_output.cc  test.cc  test_LLSQ_solver.cc  test_cov_vecs.cc  test_covarrying_vector.cc  test_factories.cc  test_fake_3pt.cc  test_fake_3pt_aux.cc  test_fake_ini.cc  test_ff_pipi.cc  test_fit_constant.cc  test_gen_fake_dataset.cc  test_invert_subduction.cc  test_load_database.cc  test_load_fake_data.cc  test_make_fake_data_ini.cc  test_make_fake_overlaps.cc  test_make_fake_spectrum.cc  test_minimal_fake_data.cc  test_polarisation_tensor.cc  test_readers.cc  test_xml_to_redstar.cc
(+24 files in other folders)
